# umurmur

./: .coderabbit.yaml  .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CNAME  ChangeLog  Dockerfile  Dockerfile.alpine  Dockerfile.debian  Dockerfile.mbedtls  Dockerfile.openssl  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  config.h.in  configure  configure.ac  docker-compose.yaml  index.html  params.json  umurmur.conf.example
.github/workflows/: build.yaml  docker.yaml  docs.yaml  valgrind.yaml
cmake/Modules/: FindLibconfig.cmake  FindMbedTLS.cmake  FindNettle.cmake  FindPolarSSL.cmake  FindProtobufC.cmake  FindmbedTLS.cmake  Options.cmake  SelectRTBackend.cmake  SelectTLSBackend.cmake  Tools.cmake
files/: umurmur.conf  umurmur.init
openwrt/: Makefile  Makefile.openssl  Makefile.polarssl
openwrt/files/: umurmur.conf  umurmur.init
shm_utils/mon-umurmurd/: CHANGES  Makefile  README.md  mon-umurmurd.c
shm_utils/umurmurd-websocket/: CHANGES  CMakeLists.txt  README.md
shm_utils/umurmurd-websocket/src/: uMurmurd_Websocket.c
shm_utils/umurmurd-websocket/web/: mon_umurmurd.html
shm_utils/umurmurd-websocket/web/css/: mon_umurmurd.css
shm_utils/umurmurd-websocket/web/ssl/: umurmurd_websocket.key.pem  umurmurd_websocket.pem
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Mumble.pb-c.c  Mumble.pb-c.h  ban.c  ban.h  byteorder.h  channel.c  channel.h  client.c  client.h  conf.c  conf.h  config.h.in  crypt.c  crypt.h  debuggaiinfofunc.c  depend.mak  list.h  log.c  log.h  main.c  memory.c  memory.h  messagehandler.c  messagehandler.h  messages.c  messages.h  pds.c  pds.h  server.c  server.h  sharedmemory.c  sharedmemory.h  sharedmemory_global.h  sharedmemory_struct.h  ssl.c  ssl.h  (+12 more)
src/google/protobuf-c/: Makefile  protobuf-c.c
